Upgrading to chai 0.1.17 Added GeventPoolTransport

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
 event-agora==0.4.1
-
-# Use pending branch for non-blocking connect
--e git://github.com/agoragames/py-eventsocket.git@nonblocking-connect#egg=py-eventsocket
+py-eventsocket==0.1.5
