Fix haigha cannot be installed on windows
Please see http://stackoverflow.com/questions/9136375/django-file-picker-setup-py-broken for detailed expaination

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include *.txt
 include README.rst
 include MANIFEST.in
-recursive-include scripts/ *
-recursive-include haigha/ *.py
+recursive-include scripts *
+recursive-include haigha *.py
 prune *.pyc
