Install gevent when running on travis, so that gevent tests will run, too.
Install gevent when testing on travis, but only if python is non-pypy. The current release gevent fails pypy build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
 script: nosetests
 install:
   - "pip install -r development.txt"
+  - "if [ ${TRAVIS_PYTHON_VERSION} != 'pypy' ]; then pip install gevent; fi"
   - "pip install nose"
 services:
   - rabbitmq
